# advent_of_code

2025/: Cargo.toml
2025/0x434C49434B/: Cargo.toml
2025/0x434C49434B/src/: main.rs
2025/christmas-tree-farm/: Cargo.toml
2025/christmas-tree-farm/src/: main.rs
2025/factory/src/: main.rs
2025/gift_shop/src/: main.rs
2025/gift_shop_twice/: Cargo.toml
2025/gift_shop_twice/src/: main.rs
2025/joltage/src/: main.rs
2025/kitchen/: Cargo.toml
2025/kitchen/src/: main.rs  part2.rs
2025/laboratories/src/: main.rs
2025/lobby/src/: main.rs
2025/movie/: Cargo.toml
2025/movie/src/: main.rs
2025/password_puzzle/: Cargo.toml
2025/password_puzzle/src/: main.rs
2025/playground/src/: main.rs
2025/printing_department/src/: main.rs
2025/reactor/src/: main.rs
2025/roll_paper/: Cargo.toml
2025/roll_paper/src/: main.rs
2025/trash-compactor/src/: main.rs
