[workspace]
resolver = "2"
members = [
    "0x434C49434B", 
    "christmas-tree-farm", 
    "factory",
    "gift_shop", 
    "gift_shop_twice", 
    "joltage", 
    "kitchen", 
    "laboratories", 
    "lobby", 
    "movie",
    "password_puzzle", 
    "playground", 
    "printing_department", 
    "reactor",
    "roll_paper", 
    "trash-compactor",
]
